--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,10 +1,11 @@
 $c-blue-main: #2274A5;
 $c-blue-dark: #29335C;
+$c-blue-light: #F4F8FB;
 
 $c-gray-light: #F4F4F4;
 $c-gray-medium: #D8D8D8;
 
 $c-red: #F66274;
-
+$c-white: #fff;
 
 $c-text-light: #969596;
