--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,16 +1,15 @@
 @import 'https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css';
-
 @import 'variables';
 @import 'typography';
-@import 'components/nav';
-@import 'components/userCard';
-@import 'components/peopleCard';
-@import 'components/createPost';
-@import 'components/singlePost';
-@import 'components/userInfoSide';
-@import 'components/userCover';
-@import 'components/friendProfile';
-@import 'components/login';
+
+// BASE
+// NAV
+// BUTTONS
+
+
+/* ------------------ */
+/*        BASE        */
+/* ------------------ */
 
 * {
     outline: none !important;
@@ -18,6 +17,195 @@
 
 .main {
     margin-top: 30px;
-    // display: grid;
-    // grid-template-columns: 1fr 4fr;
+}
+
+
+
+/* ----------------- */
+/*        NAV        */
+/* ----------------- */
+
+.nav-container {
+    width: 100vw;
+    background-color: $c-blue-main;
+
+
+    .nav {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        padding-top: 6px;
+        padding-bottom: 6px;
+    }
+
+    .btnHome {
+        margin-right: auto;
+
+        img {
+            height: 15px;
+        }
+    }
+
+    input {
+        border: 1px solid transparent;
+        border-radius: 20px;
+        width: 240px;
+        background-color: rgba(255,255,255,0.2);
+        padding: 3px 15px;
+        transition: all 0.1s ease;
+
+        &::placeholder {
+            color: rgba(255,255,255,0.75);
+            font-weight: 300;
+        }
+
+        &:focus {
+            background-color: rgba(255,255,255,0.9);
+
+            &::placeholder {
+                color: #000;
+            }
+        }
+    }
+
+    .btnNav {
+        height: 30px;
+        width: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: none;
+        padding: 0;
+        background-color: transparent;
+        
+        .btnNavInner{
+            height: 24px;
+            width: 24px;
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: 50% 50%;
+            transition: filter 0.1s ease;
+        }
+
+        &:hover {
+            .btnNavInner {
+                -webkit-filter: brightness(0);
+                filter: brightness(0);
+            }
+        }
+    }
+
+    .link-container {
+        position: relative;
+        margin-left: 10px;
+    }
+
+    .nav-dropdown {
+        position: absolute;
+        right: 50%;
+        top: calc(100% + 6px);
+        z-index: 1;
+        background-color: #fff;
+        box-shadow: 0px 2px 10px rgba(0,0,0,0.25);
+        border-radius: 5px 0px 5px 5px;
+        padding: 10px 20px 10px 20px;
+        display: none;
+        
+        &:before {
+            content: '';
+            position: absolute;
+            top: -10px;
+            right: 0px;
+            z-index: 10;
+            width: 0;
+            height: 0;
+            border-bottom: 10px solid #fff;
+            border-left: 15px solid transparent;
+        }
+    }
+
+    .nav-alert {
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        height: 13px;
+        min-width: 13px;
+        background-color: red;
+        border-radius: 7px;
+        z-index: 10;
+        color: #fff;
+        font-size: 10px;
+        font-weight: 600;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-left: 3px;
+        padding-right: 3px;
+    }
+}
+
+
+/* --------------------- */
+/*        BUTTONS        */
+/* --------------------- */
+
+.btnMain {
+    border-radius: 20px;
+    font-size: 12px;
+    transition: all 0.1s ease;
+    padding: 2px 10px;
+    margin-top: 3px;
+}
+
+.btnLarge {
+    border-radius: 20px;
+    font-size: 14px;
+    transition: all 0.1s ease;
+    padding: 4px 15px;
+    margin-top: 3px;
+
+}
+
+.btnBlue {
+    border: 1px solid $c-blue-main;
+    color: #fff;
+    background-color: $c-blue-main;
+
+    &:hover {
+        background-color: #fff;
+        color: $c-blue-main;
+    }
+}
+
+.btnBlueOutline {
+    border: 1px solid $c-blue-main;
+    color: $c-blue-main;
+    background-color: transparent;
+    
+    &:hover {
+        background-color: $c-blue-main;
+        color: $c-white;
+    }
+}
+
+.btnRed {
+    border: 1px solid $c-red;
+    color: #fff;
+    background-color: $c-red;
+    
+    &:hover {
+        background-color: #fff;
+        color: $c-red;
+    }
+}
+
+.btnRedOutline {
+    border: 1px solid $c-red;
+    color: $c-red;
+    background-color: transparent;
+    
+    &:hover {
+        background-color: $c-red;
+        color: $c-white;
+    }
 }
